starting to make things work  it didnt work
